turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:16: error: ';' expected but '(' found.
var U:Array[Array[Int]](2)
                       ^